--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,25 +1,28 @@
 name: superheroes
-description: A new Flutter project.
-
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+description: api with dio
+publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
+  google_fonts: ^2.1.0
+  rxdart: ^0.27.1
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  network_image_mock: ^2.0.1
 
 flutter:
-
   uses-material-design: true
-
+  assets:
+    - google_fonts/
+    - assets/
+    - assets/images/
